# znc-mailer

./: .gitignore  CMakeLists.txt  README.md  mailer.cpp
